# toy

./: .gitignore  Cargo.toml  rust-toolchain.toml
lists/src/: first.rs  second.rs
src/: main.rs
src/lists/: Cargo.toml
src/lists/src/: final.rs  first.rs  lib.rs  multiway_tree.rs  second.rs
