[package]
name = "toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
  "lists",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
lists = {path = "./lists"}
warp = "0.3"
log = "0.4"
env_logger = "0.9.0"