[package]
name = "toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "src/lists",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
datafusion = "43.0.0"
lists = {path = "src/lists"}
log = "0.4"
env_logger = "0.11"

[dependencies]
tokio.workspace = true
env_logger.workspace = true